# agent-docs-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  setup
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
skills/living-docs/: SKILL.md  _common.py  build_glossary.py  check_docs.py  init.py  new_change.py  new_domain.py  template.html
skills/living-docs/assets/: diagram.js  doc.css
src/living_docs_cli/: __init__.py  __main__.py
src/living_docs_cli/assets/fumadocs-starter/: next-env.d.ts  package.json  source.config.ts  tsconfig.json
src/living_docs_cli/assets/fumadocs-starter/app/: layout.tsx
src/living_docs_cli/assets/fumadocs-starter/app/docs/: layout.tsx
src/living_docs_cli/assets/fumadocs-starter/components/: mdx.tsx
src/living_docs_cli/assets/fumadocs-starter/lib/: layout.shared.ts  source.ts
src/living_docs_cli/assets/styles/: atlas.css
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-architecture/: SKILL.md
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-change/: SKILL.md
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-check/: SKILL.md
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-glossary/: SKILL.md
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-plan/: SKILL.md
src/living_docs_cli/assets/workflow-skills/agent-docs-kit-write/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-architecture/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-change/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-check/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-glossary/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-plan/: SKILL.md
src/living_docs_cli/assets/workflow-skills/living-docs-write/: SKILL.md
(+21 files in other folders)
