[project]
name = "yudocs"
version = "2.1.0"
description = "Bootstrap and maintain a Fumadocs-powered MDX documentation system with agent skills, reusable templates, and validation."
requires-python = ">=3.10"
dependencies = []
authors = [
  { name = "wuyuxiangX" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
  "agent-skill",
  "documentation",
  "fumadocs",
  "mdx",
  "codex",
  "claude-code",
  "cursor",
  "gemini-cli"
]

[project.scripts]
living-docs = "living_docs_cli:main"
yudocs = "living_docs_cli:main"

[project.urls]
Homepage = "https://github.com/wuyuxiangX/living-docs"
Repository = "https://github.com/wuyuxiangX/living-docs"
Issues = "https://github.com/wuyuxiangX/living-docs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/living_docs_cli"]
