[project]
name = "agent-docs-kit"
version = "2.1.0"
description = "Bootstrap and maintain a Fumadocs-powered MDX documentation system with agent skills, reusable templates, and validation."
requires-python = ">=3.10"
dependencies = []
authors = [
  { name = "wuyuxiangX" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = [
  "agent-skill",
  "documentation",
  "fumadocs",
  "mdx",
  "codex",
  "claude-code",
  "cursor",
  "gemini-cli"
]

[project.scripts]
agent-docs-kit = "living_docs_cli:main"
living-docs = "living_docs_cli:main"

[project.urls]
Homepage = "https://github.com/wuyuxiangX/agent-docs-kit"
Repository = "https://github.com/wuyuxiangX/agent-docs-kit"
Issues = "https://github.com/wuyuxiangX/agent-docs-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/living_docs_cli"]
